force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/InvoiceDuplicateClass__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDuplicateClass__c</fullName>
    <label>Invoice duplicate Class</label>
    <length>45</length>
    <type>Text</type>
</CustomField>