force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/MaxFileChunkSize__c.field-meta.xml
<CustomField>
    <fullName>MaxFileChunkSize__c</fullName>
    <label>Max File Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>