force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/MaxFileSize__c.field-meta.xml
<CustomField>
    <fullName>MaxFileSize__c</fullName>
    <label>Max File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>