force-app/main/default/objects/FieloPLT__PublicSettings__c/fields/ProductLookupField__c.field-meta.xml
<CustomField>
    <fullName>ProductLookupField__c</fullName>
    <label>Product Lookup Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>